src/objects/Approval_Step_Recall_Request__c.object
<CustomObject>
    <description>Shows the requests made to recall Approval Steps that the user doesn&apos;t have access to directly.</description>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Step</label>
        <referenceTo>Approval_Step__c</referenceTo>
        <relationshipLabel>Approval Step Recall Requests</relationshipLabel>
        <relationshipName>Approval_Step_Recall_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recalled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recalled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Step_Recall_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalled_Date__c</fullName>
        <label>Recalled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Item_Id__c</fullName>
        <label>Work Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval Step Recall Request</label>
    <nameField>
        <displayFormat>ASRR-{0000000}</displayFormat>
        <label>Approval Step Recall Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Step Recall Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>